--- a/index.qmd
+++ b/index.qmd
@@ -8,7 +8,7 @@ execute:
 bibliography: references.bib
 ---
 
->
+> **Abstract.** The purpose of this study is to investigate the relationship and impact of monetary policy on the real economy in Australia. The author uses quarterly data spanning from 1990 Q1 to 2023 Q4. The Structural Vector Autoregression (SVAR) model is used to capture the structural relationship, including analyzing the impulse responses of the variable of interest to structural shock. 
 >
 > **Keywords.** Structural VAR, SVAR, monetary policy, stock market, economic impact, impulse response function, Bayesian, cash rate
 
